# sophon-toolchain-rs

./: .gitignore  Cargo.toml  LICENSE
examples/sophon-example/: Cargo.toml  README.md
examples/sophon-example/results/: coco_yolov11s_fp32_1b.bmodel_images_rust_result.json  coco_yolov11s_int8_4b.bmodel_images_rust_result.json
examples/sophon-example/src/: main.rs  yolo.rs
examples/sophon-example/yolov8_bmcv/: CMakeLists.txt  readme.md  yolov8_bmcv
examples/sophon-example/yolov8_bmcv/include/: yolov8_det.hpp
examples/sophon-example/yolov8_bmcv/results/: coco_yolov11s_fp32_1b.bmodel_images_bmcv_cpp_result.json  coco_yolov11s_int8_1b.bmodel_images_bmcv_cpp_result.json
examples/sophon-example/yolov8_bmcv/src/: main.cpp  yolov8_det.cpp
sophon-runtime/: Cargo.toml
sophon-runtime/src/: lib.rs
