[package]
name = "sophon-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sophon-runtime = { path = "../../sophon-runtime", features = ["ffi"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
